# faust

./: .gitignore  meson.build
src/: meson.build
src/faust-lib/common/: core.h  vector.h
src/faust-lib/parser/: abstractSyntaxNode.h  faustLexer.cpp  faustLexer.h  lexer.cpp  lexer.h  meson.build  parser.h
src/lib/common/: string.h
src/lib/parser/: lexer.h  meson.build  parser.cpp  parser.h
src/programs/compiler/: main.cpp  meson.build
tests/: meson.build
